--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
     "@angular/router": "~14.2.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@nrwl/angular": "14.8.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.10",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
