--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "^1.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
-    "@nrwl/angular": "14.8.3",
+    "@nrwl/angular": "^14.8.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
@@ -45,16 +48,17 @@
     "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "14.8.3",
-    "@nrwl/cypress": "14.8.3",
-    "@nrwl/eslint-plugin-nx": "14.8.3",
+    "@nrwl/cli": "^14.8.2",
+    "@nrwl/cypress": "^14.8.2",
+    "@nrwl/eslint-plugin-nx": "^14.8.2",
     "@nrwl/jest": "14.8.3",
-    "@nrwl/linter": "14.8.3",
-    "@nrwl/nest": "14.8.3",
-    "@nrwl/node": "14.8.3",
-    "@nrwl/workspace": "14.8.3",
+    "@nrwl/linter": "^14.8.2",
+    "@nrwl/nest": "^14.8.2",
+    "@nrwl/node": "^14.8.2",
+    "@nrwl/workspace": "^14.8.2",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "cypress": "^10.7.0",
@@ -64,7 +68,7 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
-    "nx": "14.8.3",
+    "nx": "^14.8.3",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
