add services and login page to FE app

--- a/apps/trello-clone/project.json
+++ b/apps/trello-clone/project.json
@@ -19,8 +19,14 @@
           "apps/trello-clone/src/favicon.ico",
           "apps/trello-clone/src/assets"
         ],
-        "styles": ["apps/trello-clone/src/styles.scss"],
-        "scripts": []
+        "styles": [
+          "node_modules/bootstrap/scss/bootstrap.scss",
+          "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+          "apps/trello-clone/src/styles.scss"
+        ],
+        "scripts": [
+          "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+        ]
       },
       "configurations": {
         "production": {
