--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
-    "@nrwl/angular": "^14.8.2",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@nrwl/angular": "14.8.5",
+    "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
@@ -51,14 +54,14 @@
     "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "^14.8.2",
-    "@nrwl/cypress": "^14.8.2",
-    "@nrwl/eslint-plugin-nx": "^14.8.2",
-    "@nrwl/jest": "14.8.3",
-    "@nrwl/linter": "^14.8.2",
-    "@nrwl/nest": "^14.8.2",
-    "@nrwl/node": "^14.8.2",
-    "@nrwl/workspace": "^14.8.2",
+    "@nrwl/cli": "14.8.5",
+    "@nrwl/cypress": "14.8.5",
+    "@nrwl/eslint-plugin-nx": "14.8.5",
+    "@nrwl/jest": "14.8.5",
+    "@nrwl/linter": "14.8.5",
+    "@nrwl/nest": "14.8.5",
+    "@nrwl/node": "14.8.5",
+    "@nrwl/workspace": "14.8.5",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/passport-jwt": "^3.0.7",
@@ -72,10 +75,11 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
-    "nx": "14.8.2",
+    "nx": "14.8.5",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
   }
 }
+
